gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail272.d
version https://git-lfs.github.com/spec/v1
oid sha256:cfd73a4e560681c0409235a904ba3788938c84c302bde3fc505aaef8abece0dd
size 286
